---------------------------------------------------------------------------------------------------
Version: 1.1.13
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.12
Date: 2024-08-31
  Locale:
    - Added localization for Arabic
---------------------------------------------------------------------------------------------------
Version: 1.1.11
Date: 2023-12-23
  Locale:
    - Added localization for Japanese
    - Updated Vietnamese localization
---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 2023-04-01
  Locale:
    - Added localization for Simplified Chinese
    - Updated Norwegian localization
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2022-03-19
  Locale:
    - Added partial localization for Chinese Simplified
    - Updated localization for Dutch, Polish
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2021-12-11
  Locale:
    - Added partial localization for Thai
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021-10-08
  Locale:
    - Added partial localization for Bulgarian
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-09-14
  Locale:
    - Added localization for Turkish, updated localization for Brazilian Portuguese
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-08-23
  Locale:
    - Added partial localization for Korean
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-08-04
  Locale:
    - Added localization for Spanish